--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <groupId>bcm.web</groupId>
     <artifactId>BCM2WEB</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<!--hello
+!-->
     <build>
 
         <plugins>
